# aga-search

./: .gitignore  README.md  main.py  pyproject.toml
aga_search/: __init__.py  config.py  find_address.py  gui.py  read_spreadsheet.py
