[tool.poetry]
name = "aga-search"
version = "0.1.0"
description = ""
authors = ["Christian Bueno <chmabuen@espol.edu.ec>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
customtkinter = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "aga_search.main:main"