[tool.poetry]
name = "aga-search"
version = "0.1.0"
description = ""
authors = ["Christian Bueno <chmabuen@espol.edu.ec>"]
readme = "README.md"

[tool.poetry.dependencies]
# python = "^3.12"
python = ">=3.8,<3.14"
customtkinter = "^5.2.2"
pandas = "^2.2.3"
unidecode = "^1.3.8"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "aga_search.main:main"